# xmms2-devel

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  COPYING  ChangeLog  Doxyfile  Doxyfile-graph  INSTALL  Makefile  NEWS  README  README-maint.mdown  README.mdown  ROADMAP  SConstruct  TODO  autogen.sh  config  configure.ac  design.txt  gittools.py  waf  waf-light  wscript  xmms2.pc.in  xmmsconf.py  xmmsenv.py
.github/workflows/: ci.yml
acmacros/: my_macros.m4  sidplay2.m4  vorbis.m4
daap-test/: Makefile  README  cc_handlers.c  cc_handlers.h  client.c  client.h  daap_conn.c  daap_conn.h  daap_util.c
debian/: README.debian  changelog  control  copyright  copyright.footer  copyright.header  libxmms2client-dev.install  libxmms2client-ecore-dev.install  libxmms2client-ecore-ruby1.8.install  libxmms2client-ecore.install  libxmms2client-glib-dev.install  libxmms2client-glib.install  libxmms2client-ruby.install  libxmms2client-ruby1.8.install  libxmms2client.install  postinst  python2.3-xmms2client.install  rules  shlibs.local  templates  xmms2-cd.install  xmms2-client-cli.files  xmms2-client-sdl.files  xmms2-common-dev.install  xmms2-core.dirs  xmms2-core.files  xmms2-core.install  xmms2-decoder-flac.install  xmms2-decoder-mad.install  xmms2-decoder-modplug.install  xmms2-decoder-sid.files  xmms2-decoder-sid.install  xmms2-decoder-speex.install  xmms2-decoder-vorbis.dirs  xmms2-decoder-vorbis.files  xmms2-decoder-vorbis.install  xmms2-effect-ices.files  xmms2-et.install  xmms2-output-alsa.install  xmms2-output-diskwrite.install  (+8 more)
doc/: wscript  xmms2-et.1  xmms2-launcher.8  xmms2-mdns-avahi.1  xmms2-mdns-avahi.8  xmms2.1  xmms2.pod  xmms2d.8
doc/tools/: Doxyfile-graph  Doxyfile-internal  Doxyfile-internal-graph  README.doctools
doc/user/: priorities.md
pixmaps/: wscript  xmms2.rc
scripts/: README
src/: Makefile.am  SConscript  ipc.xml  ipc.xsd  ipc.xsl
src/clients/: Makefile.am  SConscript
src/clients/cli/: Makefile  Makefile.am  Program  SConscript  cli_mlib.c  cmd_coll.c  cmd_coll.h  cmd_config.c  cmd_config.h  cmd_pls.c  (+18 more)
src/clients/gtk2/src/: Makefile.am  SConscript  callbacks.c  callbacks.h  interface.c  interface.h  main.c  support.h
src/clients/lib/xmmsclient/: Doxyfile  Library  Makefile  Makefile.am  SConscript  bindata.c  c2c.c  collection.c  collparser.c  config.c  ipc.c  ipc_carbon.c  ipc_cocoa.c  ipc_corefoundation.c  ipc_ecore.c  ipc_glib.c  medialib.c  other.c  playback.c  playlist.c  result.c  stats.c  wscript  xform.c  xhash.c  xlist.c  xmmsclient.c  xmmsclient.def  xmmsclient.h  xmmsclient_int.h  xmmswatch.c  xmmswatch.h  xqueue.c
src/clients/lib/xmmsclient/service/: client.c  common.c  common.h  interface_entity.c  interface_entity.h  service.c
src/clients/lib/xmmsclient/visualization/: client.c  common.h  dummy.c  udp.c  unixshm.c  wscript
src/include/: wscript  wscript_build
src/includepriv/: wscript
src/lib/: SConscript
src/plugins/: Makefile.am  SConscript
src/python/: SConscript  xmms_client.py  xmmsclient_binding.pyx
src/xmms/: Makefile  Makefile.am  Program  Program.xmms2-launcher  SConscript  bindata.c  bindata_ipc.py  builtin_plugins.genpy  collection.c  collection_ipc.py  collquery.c  collserial.c  collsync.c  collsync_ipc.py  config.c  config.h  config_ipc.py  config_xmms.c  config_xmms.h  converter.genpy  converter.head.c  converter_plugin.c  core.c  core.h  courier.c  courier_ipc.py  cutter_plugins.c  dbus.c  dbus_xmms.h  decoder.c  decoder.h  decoder_int.h  effect.c  effect.h  error.c  fetchinfo.c  fetchspec.c  generate-converter.py  generate-sample.py  ipc.c  (+77 more)
src/xmms/compat/: checkroot_dummy.c  checkroot_unix.c  localtime_dummy.c  localtime_unix.c  signal_dummy.c  signal_unix.c  statfs_bsd.c  statfs_dummy.c  statfs_linux.c  statfs_netbsd.c  statfs_solaris.c  symlink_dummy.c  symlink_unix.c  thread_name_dummy.c  thread_name_prctl.c
src/xmms/visualization/: common.h  dummy.c  format.c  object.c  object_ipc.py  udp.c  unixshm.c  wscript  xform.c
tests/: wscript  xcu.h
tests/client/: t_command_trie.c
tests/integration_tests/: gen-data.py  test_cli.py
tests/runner/: main.c  memory_status.c  memory_status.h  valgrind.c  wscript  xcu_valgrind.h
tests/server/: medialib-runner.c  t_collection.c  t_medialib.c  t_playlist.c  t_streamtype.c  t_xform.c
tests/server-utils/: ipc_call.c  ipc_call.h  mlib_utils.c  mlib_utils.h
tests/utils/: coll_utils.c  coll_utils.h  ipc_call.c  ipc_call.h  jsonism.c  jsonism.h  mlib_utils.c  mlib_utils.h  value_utils.c  value_utils.h
tests/xmmsv/: t_coll.c  t_xmmsv.c  t_xmmsv_serialization.c
utils/: compare-builds.py  gen-changelog.py  gen-tarball.py  gen-tree-hashes.py  gen-wiki-release-authors.py  gen-wiki-release-bugs.py  tag-xmms2.sh  travis-build.sh  update_copyright_year.sh  valgrind-suppressions  wafgen  wafgen.conf
wafadmin/: Action.py  Build.py  Common.py  Configure.py  Constants.py  DirWatch.py  Environment.py  FallbackAdaptor.py  FamAdaptor.py  GaminAdaptor.py  Node.py  Object.py  Options.py  Params.py  Runner.py  Scan.py  Scripting.py  Task.py  Test.py  UnitTest.py  Utils.py  XMLScripting.py  __init__.py  ansiterm.py  libtool_config.py  pproc.py  preproc.py
wafadmin/Tools/: KDE3.py  Ocaml.py  Qt3.py  Qt4.py  Tex.py  __init__.py  ar.py  batched_cc.py  bison.py  cc.py  ccroot.py  checks.py  compiler_cc.py  compiler_cxx.py  compiler_d.py  config_c.py  cpp.py  cs.py  d.py  dang.py  dmd.py  docbook.py  flex.py  g++-old.py  g++.py  gcc-old.py  gcc.py  gdc.py  gnome.py  java.py  misc.py  msvc.py  osx.py  perl.py  python.py  sconpat.py  sunc++.py  suncc.py  swig.py  winres.py  (+2 more)
wafadmin/test/: configure.tst  cpptest.tst  deps.tst  environment.tst  paths.tst  scanner.tst  scheduler.tst  stress.tst  stress2.tst
waftools/: compiler_flags.py  cython.py  cython_extra.py  genipc.py  genipc_header.py  genipc_server.py  gittools.py  gzip.py  indenter.py  localdeps.py  man.py  pkgconfig.py  plugin.py  podselect.py  pyrexc.py  python-generator.py  ruby.py  tool.py  unittest.py  visibility.py  xsubpp.py
xmmsenv/: pkgconfig.py  plugin.py  pyrexc.py  python-generator.py  tool.py
(+903 files in other folders)
